Add Main section with Products Grid, contact information and Footer with copyright

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <header>
 <!--Logo-->
-      <img src="./resources/img/logo.png" alt="Secret Agent Supply">
+      <div class="logo">
+        <img src="./resources/img/logo.png" alt="Secret Agent Supply">
+        <p>SECRET AGENT SUPPLY INC.</p>
+      </div>
 
 <!--Main Banner / Jumbotron with New Arrival-->
       <section class="banner">
@@ -31,7 +34,44 @@
         </ul>
       </nav>
     </header>
+    <main>
+<!--Grid of products in display-->
+      <section class="products-grid">
+        <div class="product">
+          <img src="./resources/img/pen.png" alt="Exploding Pen">
+          <h3>Exploding Pen</h3>
+        </div>
 
+        <div class="product">
+          <img src="./resources/img/watch.png" alt="Cellular Watch">
+          <h3>Cellular Watch</h3>
+        </div>
+
+        <div class="product">
+          <img src="./resources/img/glasses.png" alt="Thermal Glasses">
+          <h3>Thermal Glasses</h3>
+        </div>
+      </section>
+
+<!--Contact Information - Location and Hours-->
+
+      <section class="contact-information">
+        <div class="location">
+          <h3>Location</h3>
+          <p>-47.346436, 84.32354</p>
+        </div>
+
+        <div class="hours">
+          <h3>Hours</h3>
+          <p>0800 - 1800</p>
+        </div>
+      </section>
+    </main>
+
+<!--Footer with Copyright information-->
+    <footer>
+    <p>Copyright Secret Agent Supply Inc.</p>
+    </footer>
 
   </body>
 </html>
