Add style to header and try to position elements via flexbox

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   <body>
     <header>
 <!--Logo-->
-      <div class="logo">
-        <img src="./resources/img/logo.png" alt="Secret Agent Supply">
-        <p>SECRET AGENT SUPPLY INC.</p>
+      <div class="container">
+          <div class="logo">
+            <img src="./resources/img/logo.png" alt="Secret Agent Supply">
+            <p>SECRET AGENT SUPPLY INC.</p>
+          </div>
       </div>
 
 <!--Main Banner / Jumbotron with New Arrival-->
       <section class="banner">
-        <div class="news">
-          <h2>New arrival</h2>
-          <h1>Sport Bikes and Motorcycles</h1>
+        <div class="container">
+          <div class="news">
+            <h2>New arrival</h2>
+            <h1>Sport Bikes and Motorcycles</h1>
+          </div>
         </div>
       </section>
 
