Adjust Style and positionning for the desktop view

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </ul>
       </nav>
     </header>
-    <main>
+
 <!--Grid of products in display-->
+    <main>
+
       <section class="products-grid">
         <div class="product">
           <img src="./resources/img/pen.png" alt="Exploding Pen">
@@ -74,7 +76,9 @@
 
 <!--Footer with Copyright information-->
     <footer>
-    <p>Copyright Secret Agent Supply Inc.</p>
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
     </footer>
 
   </body>
