Add media queries for responsviness: tablet and mobile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Secret Agent Supply Inc.</title>
@@ -36,6 +36,12 @@
           <li><a href="#">Classes</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+
+<!--Website Main Navigation - Mobile Version-->
+
+        <ul class="mobile">
+          <li> <a href="#">Menu</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -48,12 +54,12 @@
           <h3>Exploding Pen</h3>
         </div>
 
-        <div class="product">
+        <div class="product watch">
           <img src="./resources/img/watch.png" alt="Cellular Watch">
           <h3>Cellular Watch</h3>
         </div>
 
-        <div class="product">
+        <div class="product glasses">
           <img src="./resources/img/glasses.png" alt="Thermal Glasses">
           <h3>Thermal Glasses</h3>
         </div>
